--- a/src/main/resources/public/src/scss/theme/default/_tag.scss
+++ b/src/main/resources/public/src/scss/theme/default/_tag.scss
@@ -1,524 +1,1 @@
-/* 태그 기능 디자인
- * /default/_tag.scss
- * @description 라이브러리인 /vendor/tagify/tagify.css 를 재정의하여 디자인함
- *              변수를 통해 중복되는 코드 제거 및 코드 컨벤션에 맞게 수정
- * @author jy.lim
- * @version 1.0
- */
-// tag 동작 이벤트
-@include keyframe(tags--bump) {
-  30% {
-    transform: scale(1.2);
-  }
-}
-@include keyframe(rotateLoader) {
-  to {
-    transform: rotate(1turn);
-  }
-}
-
-.tagify {
-  display: flex;
-  min-height: 2.5rem; // 40px
-  align-items: flex-start;
-  flex-wrap: wrap;
-  position: relative;
-  padding: 0 0 0 0.3125rem; // 0 0 0 5px
-  border: $tagify-border;
-  line-height: 1.1;
-  cursor: text;
-  outline: 0;
-  transition: 0.1s;
-  --tag-hide-transition: 0.3s;
-
-  &:hover {
-    border: $tagify-hover-border;
-  }
-
-  &.tagify--focus {
-    border: $tagify-focus-border;
-    transition: 0s;
-  }
-
-  &[readonly] {
-    cursor: default;
-
-    > .tagify__input {
-      width: 0;
-      margin: 0.3125rem 0; // 5px 0px
-      visibility: hidden;
-    }
-
-    .tagify__tag__removeBtn {
-      display: none;
-    }
-
-    .tagify__tag > div {
-      padding: 0.25rem 0.5rem; // 4px, 8px
-      color: $tagify-read-font-color;
-      pointer-events: none;
-
-      &::before {
-        background-color: $tagify-read-bg-color;
-        pointer-events: none;
-        box-shadow: none;
-      }
-    }
-  }
-
-  &:not(.tagify--mix) {
-    .tagify__input  {
-      * {
-        display: inline;
-        white-space: nowrap;
-      }
-
-      br {
-        display: none;
-      }
-    }
-  }
-  + input,
-  + textarea {
-    display: none !important;
-  }
-}
-
-.tagify--loading {
-  .tagify__input {
-    &::before {
-      content: none;
-    }
-    &::after {
-      width: 0.75rem; // 12px
-      height: 0.75rem; // 12px
-      margin: -0.125rem 0 -0.125rem 0.5rem; // -2px, 0, -2px, 8px
-      border: $tagify-load-border;
-      border-color: $tagify-load-border-color;
-      border-radius: 50%;
-      content: '';
-      vertical-align: middle;
-      opacity: 1;
-      animation: rotateLoader 0.4s infinite linear;
-    }
-    &:empty::after {
-      margin-left: 0;
-    }
-  }
-}
-
-.tagify__tag {
-  display: inline-flex;
-  align-items: center;
-  position: relative;
-  margin: 0.3125rem 0 0.3125rem 0.3125rem; //5px 0 5px 5px
-  z-index: 1;
-  outline: 0;
-  cursor: default;
-  transition: 0.13s ease-out;
-
-  > div {
-    max-width: 100%;
-    padding: 0.25rem 0.5rem; // 4px, 8px
-    border-radius: 0.188rem; // 3px
-    vertical-align: top;
-    box-sizing: border-box;
-    color: black;
-    line-height: inherit;
-    -webkit-user-select: none;
-    user-select: none;
-    transition: 0.13s ease-out;
-
-    > * {
-      display: inline-block;
-      vertical-align: top;
-      min-width: 1ch;
-      max-width: max-content;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      transition: 0.8s ease, 0.1s color;
-    }
-
-    > [contenteditable] {
-      max-width: 21.88rem; // 350px
-      margin: -0.125rem; // -2px
-      padding: 0.125rem; // 2px
-      outline: 0;
-      -webkit-user-select: text;
-      user-select: text;
-      cursor: text;
-    }
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      border-radius: inherit;
-      z-index: -1;
-      pointer-events: none;
-      transition: 120ms ease;
-      animation: tags--bump 0.3s ease-out 1;
-      box-shadow: 0 0 0 1.125rem #e5e5e5 inset;
-    }
-  }
-
-  &:hover:not([readonly]) div::before {
-    top: -0.125rem; // -2px
-    right: -0.125rem; // -2px
-    bottom: -0.125rem; // -2px
-    left: -0.125rem; // -2px
-    box-shadow: 0 0 0 1.125rem #d3e2e2 inset;
-  }
-
-  &--loading {
-    pointer-events: none;
-
-    .tagify__tag__removeBtn {
-      display: none;
-    }
-
-    &::after {
-      content: '';
-      vertical-align: middle;
-      width: 0.688rem; // 11px
-      height: 0.688rem; // 11px
-      margin: 0 0.5rem 0 -0.063rem; // 8px, -1px
-      border: $tagify-load-border;
-      border-color: $tagify-load-border-color;
-      border-radius: 50%;
-      opacity: 1;
-      animation: rotateLoader 0.4s infinite linear;
-    }
-  }
-
-  &.tagify--noAnim {
-    > div::before {
-      animation: none;
-    }
-  }
-
-  &.tagify--hide {
-    width: 0 !important;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: 0;
-    margin-right: 0;
-    opacity: 0;
-    transform: scale(0);
-    transition: var(--tag-hide-transition);
-    pointer-events: none;
-  }
-
-  &.tagify--mark {
-    div::before {
-      animation: none;
-    }
-  }
-
-  &.tagify--notAllowed {
-    &:not(.tagify__tag--editable) div {
-      > span {
-        opacity: 0.5;
-      }
-
-      &::before {
-        box-shadow: 0 0 0 1.125rem rgba(211, 148, 148, 0.5) inset !important;
-        transition: 0.2s;
-      }
-    }
-  }
-
-  &[readonly] {
-    .tagify__tag__removeBtn {
-      display: none;
-    }
-
-    > div::before {
-      background: linear-gradient(45deg, #e5e5e5 25%, transparent 25%, transparent 50%, #e5e5e5 50%, #e5e5e5 75%, transparent 75%, transparent) 0/5px 5px;
-      box-shadow: none;
-      filter: brightness(0.95);
-    }
-  }
-}
-
-.tagify__tag--editable {
-  > div {
-    color: black;
-
-    &::before {
-      box-shadow: 0 0 0 2px #d3e2e2 inset !important;
-    }
-  }
-
-  &.tagify--invalid {
-    > div::before {
-      box-shadow: 0 0 0 2px #d39494 inset !important;
-    }
-  }
-}
-
-.tagify__tag__removeBtn {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 0.875rem; // 14px
-  height: 0.875rem; // 14px
-  margin: 0 0.25rem; // 0 4.66667px
-  transition: 0.2s ease-out;
-  border-radius: 3.125rem; // 50px
-  order: 5;
-  cursor: pointer;
-  font: 0.875rem Serif; // 14px
-  color: black;
-  background: 0 0;
-
-  &::after {
-    content: '\00D7';
-  }
-
-  &:hover {
-    color: white;
-    background: #c77777;
-    + div {
-      > span {
-        opacity: 0.5;
-      }
-      &::before {
-        box-shadow: 0 0 0 1.125em rgba(211, 148, 148, 0.3) inset !important;
-        transition: 0.2s;
-      }
-    }
-  }
-}
-
-.tagify__input {
-  flex: 1;
-  display: block;
-  min-width: 6.875rem; // 110px
-  margin: 0.312rem; // 5px
-  padding: 0.3em 0.5em;
-  line-height: inherit;
-  position: relative;
-  white-space: pre-line;
-
-  &:empty::before {
-    transition: 0.2s ease-out;
-    opacity: 0.5;
-    transform: none;
-    width: auto;
-  }
-
-  &:focus {
-    outline: 0;
-    &::before {
-      transition: 0.2s ease-out;
-      opacity: 0;
-      transform: translatex(6px);
-    }
-
-    &:empty::before {
-      transition: 0.2s ease-out;
-      opacity: 0.3;
-      transform: none;
-    }
-  }
-
-  &::before {
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 0;
-    height: 1em;
-    margin: auto 0;
-    content: attr(data-placeholder);
-    line-height: 1em;
-    z-index: 1;
-    color: black;
-    opacity: 0;
-    white-space: nowrap;
-    pointer-events: none;
-  }
-
-
-  &::after {
-    content: attr(data-suggest);
-    display: inline-block;
-    max-width: 100px;
-    white-space: pre;
-    color: black;
-    opacity: 0.3;
-    pointer-events: none;
-  }
-
-  .tagify__tag {
-    margin: 0;
-
-    > div {
-      padding-top: 0;
-      padding-bottom: 0;
-    }
-  }
-}
-
-@supports (-moz-appearance:none) {
-  .tagify__input:empty {
-    display: flex;
-  }
-}
-
-@supports (-moz-appearance:none) {
-  .tagify__input:focus::before {
-    display: none;
-  }
-}
-
-@media all and (-ms-high-contrast: none),
-(-ms-high-contrast: active) {
-  .tagify__input:focus::before {
-    display: none;
-  }
-}
-
-@supports (-ms-ime-align:auto) {
-  .tagify__input:focus::before {
-    display: none;
-  }
-}
-@supports (-moz-appearance:none) {
-  .tagify__input:focus:empty::before {
-    display: inline-block;
-  }
-}
-
-.tagify--mix {
-  line-height: 1.7;
-
-  .tagify__input {
-    width: 100%;
-    height: 100%;
-    padding: 5px;
-    margin: 0;
-    line-height: inherit;
-    &::before {
-      position: static;
-      height: auto;
-      line-height: inherit;
-    }
-    &::after {
-      content: none;
-    }
-  }
-}
-
-.tagify--select {
-  &::after {
-    content: '>';
-    position: absolute;
-    top: 50%;
-    right: 0;
-    bottom: 0;
-    height: 8px;
-    opacity: 0.5;
-    font: 16px monospace;
-    line-height: 8px;
-    pointer-events: none;
-    transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
-    transition: 0.2s ease-in-out;
-  }
-
-  &[aria-expanded=true]::after {
-    transform: translate(-150%, -50%) rotate(270deg) scaleY(1.2);
-  }
-
-  .tagify__tag {
-    position: absolute;
-    top: 0;
-    right: 1.8em;
-    bottom: 0;
-    div {
-      display: none;
-    }
-  }
-
-  .tagify__input {
-    width: 100%;
-  }
-}
-
-.tagify--invalid {
-  border: #D39494;
-}
-
-.tagify__dropdown {
-  position: absolute;
-  z-index: 9999;
-  transform: translateY(1px);
-  overflow: hidden;
-
-  &[placement=top] {
-    margin-top: 0;
-    transform: translateY(-2px);
-    .tagify__dropdown__wrapper {
-      border-top-width: 1px;
-      border-bottom-width: 0;
-    }
-  }
-
-  &--text {
-    box-shadow: 0 0 0 3px rgba(53, 149, 246, 0.1);
-    font-size: 0.9em;
-
-    .tagify__dropdown__wrapper {
-      border-width: 1px;
-    }
-  }
-
-  &__wrapper {
-    max-height: 300px;
-    border: 1px solid #3595f6;
-    border-top-width: 0;
-    overflow: hidden;
-    background: white;
-    box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.2);
-    transition: 0.25s cubic-bezier(0, 1, 0.5, 1);
-
-    &:hover {
-      overflow: auto;
-    }
-  }
-
-  &--initial {
-    &[placement=top] .tagify__dropdown__wrapper {
-      transform: translateY(2em);
-    }
-
-    .tagify__dropdown__wrapper {
-      max-height: 20px;
-      transform: translateY(-1em);
-    }
-  }
-
-  &__item {
-    position: relative;
-    box-sizing: inherit;
-    padding: 0.3em 0.5em;
-    margin: 1px;
-    border-radius: 2px;
-    cursor: pointer;
-    outline: 0;
-
-    &:active {
-      filter: brightness(105%);
-    }
-
-    &--active {
-      color: white;
-      background: #3595f6;
-    }
-  }
-}
+@import '../../template/_tag.scss';
