--- a/src/main/resources/public/assets/css/formRefactoring.css
+++ b/src/main/resources/public/assets/css/formRefactoring.css
@@ -585,7 +585,7 @@ input, button, select, optgroup, textarea {
   top: 3.125rem;
   left: 0;
   bottom: 0;
-  width: 15.63rem;
+  width: 12.5rem;
   background-color: #ffffff;
   border-right: 0.0625rem solid #EBEBEB;
   box-shadow: 0.0625rem 0 0.4375rem 0 rgba(204, 206, 209, 0.15);
@@ -598,7 +598,7 @@ input, button, select, optgroup, textarea {
   right: 18.75rem;
   bottom: 0;
   overflow-y: auto;
-  left: 15.63rem;
+  left: 12.5rem;
   right: 20rem;
   background-color: #F7F8F9;
   -ms-overflow-style: none;
@@ -695,10 +695,11 @@ input, button, select, optgroup, textarea {
   margin: 0;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon {
-  width: 7.813rem;
-  height: 7.188rem;
+  width: 6.25rem;
+  height: 4.6875rem;
   text-align: center;
   border: 0.0625rem solid #EBEBEB;
+  padding: 0.625rem 0;
   margin-top: -0.0625rem;
   margin-right: -0.0625rem;
   cursor: move;
@@ -711,232 +712,233 @@ input, button, select, optgroup, textarea {
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon {
   display: inline-block;
-  margin: 1.563rem 0 0.625rem 0;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-inputBox {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-inputbox.svg");
   mask-image: url("../media/icons/form/context-menu/icon-inputbox.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-textArea {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-textbox.svg");
   mask-image: url("../media/icons/form/context-menu/icon-textbox.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-textEditor {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-textbox.svg");
   mask-image: url("../media/icons/form/context-menu/icon-textbox.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-dropdown {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-dropdown.svg");
   mask-image: url("../media/icons/form/context-menu/icon-dropdown.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-radio {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-radio.svg");
   mask-image: url("../media/icons/form/context-menu/icon-radio.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-checkBox {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-checkbox.svg");
   mask-image: url("../media/icons/form/context-menu/icon-checkbox.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-label {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-label.svg");
   mask-image: url("../media/icons/form/context-menu/icon-label.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-date {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-date.svg");
   mask-image: url("../media/icons/form/context-menu/icon-date.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-time {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-time.svg");
   mask-image: url("../media/icons/form/context-menu/icon-time.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-dateTime {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-datetime.svg");
   mask-image: url("../media/icons/form/context-menu/icon-datetime.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-fileUpload {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-fileupload.svg");
   mask-image: url("../media/icons/form/context-menu/icon-fileupload.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-customCode {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-custom-code.svg");
   mask-image: url("../media/icons/form/context-menu/icon-custom-code.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-dynamicRowTable {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-dynamic-row-table.svg");
   mask-image: url("../media/icons/form/context-menu/icon-dynamic-row-table.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-ci {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-ci.svg");
   mask-image: url("../media/icons/form/context-menu/icon-ci.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-label {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-label.svg");
   mask-image: url("../media/icons/form/context-menu/icon-label.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-image {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-image.svg");
   mask-image: url("../media/icons/form/context-menu/icon-image.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .icon-divider {
-  width: 2.375rem;
-  height: 2.375rem;
+  width: 2rem;
+  height: 2rem;
   -webkit-mask-image: url("../media/icons/form/context-menu/icon-divider.svg");
   mask-image: url("../media/icons/form/context-menu/icon-divider.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 2.375rem 2.375rem;
-  mask-size: 2.375rem 2.375rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-size: 2rem 2rem;
   background: #929AA6;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon .component-name {
   display: block;
+  padding-top: 0.375rem;
   color: #ACB4BF;
+  font-size: 0.875rem;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon.drag-on .icon {
   background: #0098FF;
