#10553 [SCSS 개선] mixins, function 리팩터링 검토

--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -121,9 +121,7 @@
               }
             }
             th, td {
-              text-overflow: ellipsis;
-              overflow: hidden;
-              white-space:nowrap;
+              @include ellipsis(table-cell);
             }
             th { 
               color: map-get($blacks, "light");
