--- a/src/main/resources/public/src/scss/template/_mixins.scss
+++ b/src/main/resources/public/src/scss/template/_mixins.scss
@@ -5,4 +5,5 @@
 @import "mixins/_scroll.scss";
 @import "mixins/_divider.scss";
 @import "mixins/_font";
+@import "mixins/_text";
 @import "mixins/_color-picker.scss";
