--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -110,9 +110,7 @@ table[id="documentDisplay"] {
       height: 1.5rem; // 24px
       font-weight: $font-weight-regular;
       color: map-get($grays, "dark");
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+      @include ellipsis(list-item);
     }
   }
 }
