--- a/src/main/resources/public/assets/css/form2.css
+++ b/src/main/resources/public/assets/css/form2.css
@@ -485,9 +485,12 @@ input, button, select, optgroup, textarea {
 }
 
 .text-ellipsis {
+  display: inline-block;
+  max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  word-wrap: normal;
 }
 
 .auto-break {
@@ -1173,9 +1176,12 @@ table tr th {
 }
 table tr td, table tr th {
   border: 0.0625rem solid transparent;
+  display: table-cell;
+  max-width: 100%;
   text-overflow: ellipsis;
-  overflow: hidden;
   white-space: nowrap;
+  overflow: hidden;
+  word-wrap: normal;
 }
 
 select {
@@ -1291,8 +1297,12 @@ select:disabled {
   margin: 0;
   padding: 0.75rem 0;
   text-indent: 0.625rem;
+  display: list-item;
+  max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
+  word-wrap: normal;
 }
 .select .designed-options li:hover {
   background: rgba(0, 152, 255, 0.08);
@@ -1380,6 +1390,10 @@ label {
 }
 .radio input[type=radio]:not(:disabled):checked + span::after {
   background-color: #0098FF;
+  -webkit-transform: translate(4px, 9px) scale(1);
+  -moz-transform: translate(4px, 9px) scale(1);
+  -o-transform: translate(4px, 9px) scale(1);
+  -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
 }
 .radio input[type=radio]:not(:disabled):hover + span::before {
@@ -1395,6 +1409,10 @@ label {
 }
 .radio input[type=radio]:disabled:checked + span::after {
   background-color: #ACB4BF;
+  -webkit-transform: translate(4px, 9px) scale(1);
+  -moz-transform: translate(4px, 9px) scale(1);
+  -o-transform: translate(4px, 9px) scale(1);
+  -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
 }
 .radio:focus input[type=radio]:not(:disabled) + span:before {
@@ -1444,6 +1462,10 @@ label {
   border: 0.125rem solid #0098FF;
   border-right: none;
   border-top: none;
+  -webkit-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  -moz-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  -o-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  -ms-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
   transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
 }
 .checkbox input[type=checkbox]:not(:disabled):hover + span::before {
@@ -1510,8 +1532,11 @@ label {
   background-color: #0098FF;
 }
 .switch input[type=checkbox]:checked + span::before {
-  -webkit-transform: translateX(2.875rem);
-  transform: translateX(2.875rem);
+  -webkit-transform: translate(2.875rem, 0);
+  -moz-transform: translate(2.875rem, 0);
+  -o-transform: translate(2.875rem, 0);
+  -ms-transform: translate(2.875rem, 0);
+  transform: translate(2.875rem, 0);
 }
 .switch input[type=checkbox]:hover + span::before {
   border-color: #0098FF;
@@ -2576,6 +2601,9 @@ button.ghost-line:disabled .icon {
 
 .scrollbar.os-host-transition > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
   -webkit-transition: background-color 0.3s;
+  -moz-transition: background-color 0.3s;
+  -o-transition: background-color 0.3s;
+  -ms-transition: background-color 0.3s;
   transition: background-color 0.3s;
 }
 
@@ -2935,12 +2963,15 @@ button.ghost-line:disabled .icon {
   opacity: 1;
 }
 .file-uploader-edit .dropzone .dz-preview:hover .dz-image img {
-  -webkit-transform: scale(1.05, 1.05);
-  -moz-transform: scale(1.05, 1.05);
-  -ms-transform: scale(1.05, 1.05);
-  -o-transform: scale(1.05, 1.05);
-  transform: scale(1.05, 1.05);
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
   -webkit-filter: blur(8px);
+  -moz-filter: blur(8px);
+  -o-filter: blur(8px);
+  -ms-filter: blur(8px);
   filter: blur(8px);
 }
 .file-uploader-edit .dropzone .dz-preview.dz-file-preview .dz-image {
@@ -2980,11 +3011,14 @@ button.ghost-line:disabled .icon {
   grid-row: 1/span 2;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-details .dz-filename {
-  white-space: nowrap;
-  text-align: left;
-  overflow: hidden;
+  display: inline-block;
+  max-width: 100%;
   text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  word-wrap: normal;
   padding: 0 20px;
+  text-align: left;
   grid-column: 2;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-details .dz-filename span {
@@ -3131,11 +3165,36 @@ button.ghost-line:disabled .icon {
   transition: opacity 0.4s ease-in;
 }
 .file-uploader-edit .dropzone .dz-preview:not(.dz-processing) .dz-progress {
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 6s;
+  -webkit-animation-name: pulse;
+  -webkit-animation-timing-function: ease;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-direction: normal;
+  -moz-animation-delay: 0s;
+  -moz-animation-duration: 6s;
+  -moz-animation-name: pulse;
+  -moz-animation-timing-function: ease;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-direction: normal;
+  -o-animation-delay: 0s;
+  -o-animation-duration: 6s;
+  -o-animation-name: pulse;
+  -o-animation-timing-function: ease;
+  -o-animation-iteration-count: infinite;
+  -o-animation-direction: normal;
+  -ms-animation-delay: 0s;
+  -ms-animation-duration: 6s;
+  -ms-animation-name: pulse;
+  -ms-animation-timing-function: ease;
+  -ms-animation-iteration-count: infinite;
+  -ms-animation-direction: normal;
   animation-delay: 0s;
   animation-duration: 6s;
   animation-name: pulse;
   animation-timing-function: ease;
   animation-iteration-count: infinite;
+  animation-direction: normal;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-progress {
   position: relative;
@@ -3147,6 +3206,9 @@ button.ghost-line:disabled .icon {
   border-radius: 0.5rem;
   margin: 0 5%;
   -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
   transform: scale(1);
   opacity: 1;
   z-index: 750;
@@ -3540,13 +3602,14 @@ button.ghost-line:disabled .icon {
   background-color: #EBEBEB;
 }
 .ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-label svg {
+  -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
   -webkit-transform-origin: 50% 50%;
   -moz-transform-origin: 50% 50%;
+  -o-transform-origin: 50% 50%;
   -ms-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
 }
@@ -3610,10 +3673,10 @@ button.ghost-line:disabled .icon {
 }
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label .ql-icon-arrow {
   fill-opacity: 1;
+  -webkit-transform: translate(178px, -341px);
   -moz-transform: translate(178px, -341px);
   -o-transform: translate(178px, -341px);
   -ms-transform: translate(178px, -341px);
-  -webkit-transform: translate(178px, -341px);
   transform: translate(178px, -341px);
 }
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label:hover, .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label:focus {
@@ -3644,10 +3707,10 @@ button.ghost-line:disabled .icon {
 }
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-label .ql-icon-arrow {
   fill-opacity: 1;
+  -webkit-transform: translate(568px, 439px) rotate(180deg);
   -moz-transform: translate(568px, 439px) rotate(180deg);
   -o-transform: translate(568px, 439px) rotate(180deg);
   -ms-transform: translate(568px, 439px) rotate(180deg);
-  -webkit-transform: translate(568px, 439px) rotate(180deg);
   transform: translate(568px, 439px) rotate(180deg);
 }
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-options {
@@ -4122,11 +4185,36 @@ body.modal-active {
 }
 .help-tooltip:hover .tooltip-contents {
   visibility: visible;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 0.3s;
+  -webkit-animation-name: fadeIn;
+  -webkit-animation-timing-function: ease-out;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+  -moz-animation-delay: 0s;
+  -moz-animation-duration: 0.3s;
+  -moz-animation-name: fadeIn;
+  -moz-animation-timing-function: ease-out;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-direction: normal;
+  -o-animation-delay: 0s;
+  -o-animation-duration: 0.3s;
+  -o-animation-name: fadeIn;
+  -o-animation-timing-function: ease-out;
+  -o-animation-iteration-count: 1;
+  -o-animation-direction: normal;
+  -ms-animation-delay: 0s;
+  -ms-animation-duration: 0.3s;
+  -ms-animation-name: fadeIn;
+  -ms-animation-timing-function: ease-out;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-direction: normal;
   animation-delay: 0s;
   animation-duration: 0.3s;
   animation-name: fadeIn;
   animation-timing-function: ease-out;
   animation-iteration-count: 1;
+  animation-direction: normal;
 }
 .help-tooltip:hover .help-tooltip-icon {
   background: #0098FF;
@@ -4151,11 +4239,36 @@ body.modal-active {
 }
 .header-tooltip:hover .tooltip-contents {
   visibility: visible;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 0.3s;
+  -webkit-animation-name: fadeIn;
+  -webkit-animation-timing-function: ease-out;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+  -moz-animation-delay: 0s;
+  -moz-animation-duration: 0.3s;
+  -moz-animation-name: fadeIn;
+  -moz-animation-timing-function: ease-out;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-direction: normal;
+  -o-animation-delay: 0s;
+  -o-animation-duration: 0.3s;
+  -o-animation-name: fadeIn;
+  -o-animation-timing-function: ease-out;
+  -o-animation-iteration-count: 1;
+  -o-animation-direction: normal;
+  -ms-animation-delay: 0s;
+  -ms-animation-duration: 0.3s;
+  -ms-animation-name: fadeIn;
+  -ms-animation-timing-function: ease-out;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-direction: normal;
   animation-delay: 0s;
   animation-duration: 0.3s;
   animation-name: fadeIn;
   animation-timing-function: ease-out;
   animation-iteration-count: 1;
+  animation-direction: normal;
 }
 
 .clipboard-tooltip {
@@ -4235,11 +4348,36 @@ body.modal-active {
 }
 .help-tooltip:hover .tooltip-contents {
   visibility: visible;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 0.3s;
+  -webkit-animation-name: fadeIn;
+  -webkit-animation-timing-function: ease-out;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+  -moz-animation-delay: 0s;
+  -moz-animation-duration: 0.3s;
+  -moz-animation-name: fadeIn;
+  -moz-animation-timing-function: ease-out;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-direction: normal;
+  -o-animation-delay: 0s;
+  -o-animation-duration: 0.3s;
+  -o-animation-name: fadeIn;
+  -o-animation-timing-function: ease-out;
+  -o-animation-iteration-count: 1;
+  -o-animation-direction: normal;
+  -ms-animation-delay: 0s;
+  -ms-animation-duration: 0.3s;
+  -ms-animation-name: fadeIn;
+  -ms-animation-timing-function: ease-out;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-direction: normal;
   animation-delay: 0s;
   animation-duration: 0.3s;
   animation-name: fadeIn;
   animation-timing-function: ease-out;
   animation-iteration-count: 1;
+  animation-direction: normal;
 }
 .help-tooltip:hover .help-tooltip-icon {
   background: #0098FF;
@@ -4313,6 +4451,10 @@ body.modal-active {
   border-bottom-color: #EBEBEB;
 }
 .zenius-group.accordion .zenius-group-accordion-checkBox:checked + .zenius-group-label .arrow-left {
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
   transform: rotate(-90deg);
 }
 .zenius-group.accordion .zenius-group-accordion-checkBox:checked ~ .zenius-row-tooltip:not(.off) {
@@ -4339,6 +4481,10 @@ body.modal-active {
 }
 .zenius-group.accordion .zenius-row-tooltip {
   display: none;
+  -webkit-transition: all 0.25s ease-out;
+  -moz-transition: all 0.25s ease-out;
+  -o-transition: all 0.25s ease-out;
+  -ms-transition: all 0.25s ease-out;
   transition: all 0.25s ease-out;
 }
 
