--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -485,9 +485,12 @@ input, button, select, optgroup, textarea {
 }
 
 .text-ellipsis {
+  display: inline-block;
+  max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  word-wrap: normal;
 }
 
 .auto-break {
@@ -1025,9 +1028,12 @@ table tr th {
 }
 table tr td, table tr th {
   border: 0.0625rem solid transparent;
+  display: table-cell;
+  max-width: 100%;
   text-overflow: ellipsis;
-  overflow: hidden;
   white-space: nowrap;
+  overflow: hidden;
+  word-wrap: normal;
 }
 
 select {
@@ -1143,8 +1149,12 @@ select:disabled {
   margin: 0;
   padding: 0.75rem 0;
   text-indent: 0.625rem;
+  display: list-item;
+  max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
+  word-wrap: normal;
 }
 .select .designed-options li:hover {
   background: rgba(0, 152, 255, 0.08);
@@ -1232,6 +1242,10 @@ label {
 }
 .radio input[type=radio]:not(:disabled):checked + span::after {
   background-color: #0098FF;
+  -webkit-transform: translate(4px, 9px) scale(1);
+  -moz-transform: translate(4px, 9px) scale(1);
+  -o-transform: translate(4px, 9px) scale(1);
+  -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
 }
 .radio input[type=radio]:not(:disabled):hover + span::before {
@@ -1247,6 +1261,10 @@ label {
 }
 .radio input[type=radio]:disabled:checked + span::after {
   background-color: #ACB4BF;
+  -webkit-transform: translate(4px, 9px) scale(1);
+  -moz-transform: translate(4px, 9px) scale(1);
+  -o-transform: translate(4px, 9px) scale(1);
+  -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
 }
 .radio:focus input[type=radio]:not(:disabled) + span:before {
@@ -1296,6 +1314,10 @@ label {
   border: 0.125rem solid #0098FF;
   border-right: none;
   border-top: none;
+  -webkit-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  -moz-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  -o-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  -ms-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
   transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
 }
 .checkbox input[type=checkbox]:not(:disabled):hover + span::before {
@@ -1362,8 +1384,11 @@ label {
   background-color: #0098FF;
 }
 .switch input[type=checkbox]:checked + span::before {
-  -webkit-transform: translateX(2.875rem);
-  transform: translateX(2.875rem);
+  -webkit-transform: translate(2.875rem, 0);
+  -moz-transform: translate(2.875rem, 0);
+  -o-transform: translate(2.875rem, 0);
+  -ms-transform: translate(2.875rem, 0);
+  transform: translate(2.875rem, 0);
 }
 .switch input[type=checkbox]:hover + span::before {
   border-color: #0098FF;
@@ -2663,6 +2688,9 @@ button .icon-delete {
 
 .scrollbar.os-host-transition > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
   -webkit-transition: background-color 0.3s;
+  -moz-transition: background-color 0.3s;
+  -o-transition: background-color 0.3s;
+  -ms-transition: background-color 0.3s;
   transition: background-color 0.3s;
 }
 
@@ -3062,11 +3090,36 @@ button .icon-delete {
 }
 .help-tooltip:hover .tooltip-contents {
   visibility: visible;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 0.3s;
+  -webkit-animation-name: fadeIn;
+  -webkit-animation-timing-function: ease-out;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+  -moz-animation-delay: 0s;
+  -moz-animation-duration: 0.3s;
+  -moz-animation-name: fadeIn;
+  -moz-animation-timing-function: ease-out;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-direction: normal;
+  -o-animation-delay: 0s;
+  -o-animation-duration: 0.3s;
+  -o-animation-name: fadeIn;
+  -o-animation-timing-function: ease-out;
+  -o-animation-iteration-count: 1;
+  -o-animation-direction: normal;
+  -ms-animation-delay: 0s;
+  -ms-animation-duration: 0.3s;
+  -ms-animation-name: fadeIn;
+  -ms-animation-timing-function: ease-out;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-direction: normal;
   animation-delay: 0s;
   animation-duration: 0.3s;
   animation-name: fadeIn;
   animation-timing-function: ease-out;
   animation-iteration-count: 1;
+  animation-direction: normal;
 }
 .help-tooltip:hover .help-tooltip-icon {
   background: #0098FF;
@@ -3091,11 +3144,36 @@ button .icon-delete {
 }
 .header-tooltip:hover .tooltip-contents {
   visibility: visible;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 0.3s;
+  -webkit-animation-name: fadeIn;
+  -webkit-animation-timing-function: ease-out;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+  -moz-animation-delay: 0s;
+  -moz-animation-duration: 0.3s;
+  -moz-animation-name: fadeIn;
+  -moz-animation-timing-function: ease-out;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-direction: normal;
+  -o-animation-delay: 0s;
+  -o-animation-duration: 0.3s;
+  -o-animation-name: fadeIn;
+  -o-animation-timing-function: ease-out;
+  -o-animation-iteration-count: 1;
+  -o-animation-direction: normal;
+  -ms-animation-delay: 0s;
+  -ms-animation-duration: 0.3s;
+  -ms-animation-name: fadeIn;
+  -ms-animation-timing-function: ease-out;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-direction: normal;
   animation-delay: 0s;
   animation-duration: 0.3s;
   animation-name: fadeIn;
   animation-timing-function: ease-out;
   animation-iteration-count: 1;
+  animation-direction: normal;
 }
 
 .clipboard-tooltip {
@@ -3125,6 +3203,10 @@ button .icon-delete {
   left: 50%;
   margin-left: -8.125rem;
   opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  -moz-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  -ms-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
 .clipboard-tooltip .clipboard-tooltip-text::after {
