--- a/src/main/resources/public/src/scss/template/mixins/_font.scss
+++ b/src/main/resources/public/src/scss/template/mixins/_font.scss
@@ -1,4 +1,5 @@
 // font face 설정 mixin
+// @include fontFace("Noto Sans KR", $font-folder-path + "/" + $fname , "opentype", normal, $weight);
 @mixin fontFace($name, $path, $format, $style, $weight) {
   @font-face {
     font-family: $name;
