--- a/src/main/resources/public/src/scss/template/mixins/_image.scss
+++ b/src/main/resources/public/src/scss/template/mixins/_image.scss
@@ -1,7 +1,5 @@
-// TODO : backgroundImage와 maskImage 각 mixin이 의도된 기능대로 @include 되었는지 점검 필요
-// TODO : maskImage가 주석대로 아이콘(버튼)에만 사용되고 있는지 확인, mixin 이름을 기능에 맞게 수정 필요
-
 // 배경 이미지
+// @include backgroundImage($icon-folder-path + 'login/icon_login_google.svg', 1.188rem, no-repeat, 0.625rem, center, null);
 @mixin backgroundImage($path, $size, $repeat, $posX, $posY, $color) {
   background-image: url($path);
   background-size: if($size == null, auto, $size);
@@ -14,6 +12,7 @@
 }
 
 // 아이콘
+// @include maskImage('#{$icon-folder-path}icon_close.svg', 0.875rem, 0.875rem, no-repeat, center, null, $notification-icon-color);
 @mixin maskImage($path, $width, $height, $repeat, $pos, $size, $color) {
   @if ($width != null) {
     width: $width;
