--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -78,10 +78,7 @@
 }
 
 .user-name {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  max-width: 8.75rem; // 140px
+  @include ellipsis(inline-block, 8.75rem); // 140px
 }
 
 // 리스트 출력용 컬러 아이콘
