--- a/src/main/resources/public/src/scss/theme/default/_reply.scss
+++ b/src/main/resources/public/src/scss/theme/default/_reply.scss
@@ -24,7 +24,7 @@
   &-list {
     padding: 0 0;
     border-bottom: 0.0625rem solid map-get($grays, "line");
-    @include verticalBar(1.25rem, 1.25rem, 0.0625rem solid map-get($grays, "line"), 0.0625rem 0.9375rem 0.0625rem 0, );
+    @include verticalBar(1.25rem, 1.25rem, 0.0625rem solid map-get($grays, "line"), 0.0625rem 0.9375rem 0.0625rem 0);
     .reply {
       &-info {
         align-items: center;
