--- a/src/main/resources/public/src/scss/template/_tag.scss
+++ b/src/main/resources/public/src/scss/template/_tag.scss
@@ -286,7 +286,7 @@
   justify-content: center;
   width: 1.125rem; // 18px
   height: 1.125rem; // 18px
-  margin: 0 0.25rem; // 0 4.66667px
+  margin: 0 0.25rem 0 0; // 0 4.66667px
   transition: 0.2s ease-out;
   border-radius: 3.125rem; // 50px
   order: 5;
